--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+		"react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
