--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
@@ -43,7 +41,5 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.35.0",
-    "eslint-config-airbnb": "^19.0.4"
   }
 }
