--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.1",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4",
-		"react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
@@ -39,7 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
