--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,29 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "assets/img/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    }
+    },
+		
+    {
+      "src": "assets/img/logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "assets/img/logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+		},
+    {
+      "src": "assets/img/developer.gif",
+      "type": "image/gif",
+      "sizes": "1024x1024"
+		}
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#328fa8",
+  "background_color": "#9d37e6"
 }
